--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ body {
     align-items: center;
     display: flex;
     margin: 0 auto;
-    width: 100vw;
+    /* padding: 100px; */
+    width: 100vw; 
     height: 100vh;
 }
 
@@ -57,3 +58,4 @@ body {
 .hide {
     display: none;
 }
+
