--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-
+    font-family: Arial, Helvetica, sans-serif
 }
 
 h1{
@@ -19,9 +19,15 @@ body {
     height: 100vh;
 }
 
+#landing {
+    text-align: center
+}
+
 .container {
     max-width: 80%;
     padding: 5px;
+    background-color: whitesmoke;
+    border: 5px dashed black;
 }
 
 .btn-grid {
@@ -31,6 +37,9 @@ body {
     margin: 10px 0;
 }
 
+#question {
+    font-weight: bold;
+}
 
 .btn.correct {
     background-color: green;
