--- a/style.css
+++ b/style.css
@@ -20,14 +20,15 @@ body {
 }
 
 #landing {
-    text-align: center
+    text-align: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;  
 }
 
 .container {
     max-width: 80%;
     padding: 5px;
     background-color: whitesmoke;
-    border: 5px dashed black;
+    border: 1px dashed black;
 }
 
 .btn-grid {
@@ -68,3 +69,7 @@ body {
     display: none;
 }
 
+p {
+    font-family:'Arial Narrow Bold', sans-serif;
+    font-weight: 1;
+}
